Closed Bug 765496 Opened 13 years ago Closed 13 years ago

IonMonkey: fix non-methodjit build

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: evilpies, Assigned: evilpies)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix (obsolete) — Splinter Review
No description provided.
Attachment #633820 - Flags: review?(dvander)
Attached patch actual fixSplinter Review
Assignee: general → evilpies
Attachment #633820 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #633820 - Flags: review?(dvander)
Attachment #633822 - Flags: review?(dvander)
Comment on attachment 633822 [details] [diff] [review] actual fix Review of attachment 633822 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/vm/Stack.h @@ +57,5 @@ > struct InlinedSite {}; > #endif > typedef size_t FrameRejoinState; > > +#ifdef JS_ION No #ifdef's needed here. @@ +487,3 @@ > /* Called from IonMonkey to transition from bailouts. */ > void initFromBailout(JSContext *cx, ion::SnapshotIterator &iter); > +#endif No #ifdefs needed here. @@ +1668,5 @@ > > /* Bailout for normal functions. */ > StackFrame *pushBailoutFrame(JSContext *cx, const ion::IonBailoutIterator &it, > const CallArgs &args, BailoutFrameGuard *bfg); > +#endif No #ifdefs needed here.
Attachment #633822 - Flags: review?(dvander) → review+
I actually landed that? http://hg.mozilla.org/projects/ionmonkey/rev/6722bb3c5549/ I still need to fix threadsafe builds to make tbpl happy.
https://hg.mozilla.org/projects/ionmonkey/rev/5d3e8c9dc6f8 Wasn't a NSPR issue after all, but in case this is giving you issues locally, you need a pretty recent version of NSPR (something with Bug 758837).
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: