Bug 765496 - fix non-methodjit build. r=dvander