js/src/vm/Stack-inl.h
@@ -622,7 +622,9 @@ StackIter::forEachCanonicalActualArg(Op op, unsigned start /* = 0 */, unsigned c
         JS_ASSERT(isFunctionFrame());
         return fp()->forEachCanonicalActualArg(op, start, count);
       case ION:
+#ifdef JS_ION
         return ionInlineFrames_.forEachCanonicalActualArg(op, start, count);
+#endif
       case NATIVE:
       case IMPLICIT_NATIVE:
         JS_NOT_REACHED("Unused ?");
